[tool.poetry]
name = "flux_orm"
version = "0.1.0"
description = ""
authors = ["Jumbik_Tank <oprivetdaent@gmail.com>"]
readme = "README.md"
packages = [
  { include = "flux-orm" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.114.0"
pydantic = ">=1.8.2"
SQLAlchemy = ">=2.0.34"
uvicorn = ">=0.15.0"
python-dotenv = "1.0.1"
asyncpg = "^0.29.0"
uuid6 = "^2024.7.10"
setuptools = "^75.1.0"
pytest-sqlalchemy = "^0.2.1"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
