[tool.poetry]
name = "flux_orm"
version = "0.1.0"
description = ""
authors = ["Jumbik_Tank <oprivetdaent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
SQLAlchemy = "^2.0.34"
uvicorn = "^0.15.0"
python-dotenv = "^1.0.1"
uuid6 = "^2024.7.10"
pytest-sqlalchemy = "^0.2.1"
pytest-asyncio = "^0.24.0"
asyncpg = "^0.30.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
psycopg2 = "^2.9.10"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
